fix: [P4PU-851] upgrade jdk 17 to 21 (#201)
* P4PU-851 updated java version in gradle

* P4PU-851 updated java version in Dockerfile and code-review

* P4PU-851 updated tests and build.gradle.kts

* P4PU-851 updated dependency

* P4PU-851 replaced get(0) with getFirst()